--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -5,8 +5,7 @@ name: Unit Tests
 on:
   push:
     branches:
-      - master
-      - dev
+      - main
   pull_request:
     types: [opened, synchronize, reopened]
 
